[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Spawners/Phase1_Spawner2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Tutorial/Tutorial_Phase4.gd" type="Script" id=2]

[node name="Tutorial_Phase4" type="Spatial"]
script = ExtResource( 2 )

[node name="Phase1_Spawner2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
orb_count = 3

[node name="NextWave" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="NextWave" to="." method="_on_NextWave_timeout"]
